--- a/Curso HTML5/_css/estilo.css
+++ b/Curso HTML5/_css/estilo.css
@@ -35,7 +35,29 @@ header#cabecalho img#icone {
 }
 
 header#cabecalho {
+        /* largura da borda, cor da borda, formato da borda*/
+        border-bottom: 1px #606060 solid;
+        height: 150px;
+        /* deslocamento lateral, deslocamento vertical*/
+        background: url("../imagens/logo.png") no-repeat 0px 80px;
 
+}
+
+header#cabecalho h1 {
+        font-family: Arial, sans-serif;
+        font-size: 30pt;
+        color: #606060;
+        text-shadow: 1px 1px 1px rgba(0,0,0,.6);
+        padding: 0px;
+        margin-bottom: 0px;
+}
+
+header#cabecalho h2 {
+        font-family: Arial, Helvetica, sans-serif;
+        color: #888888;
+        font-size: 15pt;
+        padding: 0px;
+        margin-top: 0px;
 }
 
 /* Formatação de imagens com legendas */
@@ -75,12 +97,13 @@ figure.foto-legenda:hover figcaption {
 nav#menu {
         display: block;
 }
+
 nav#menu ul {
         list-style: none; /* some com os marcadores da lista */
         text-transform: uppercase;
         position: absolute;
         top: -20px;
-        left: 300px;
+        left: 600px;
 }
 
 nav#menu li {
