--- a/Curso HTML5/_css/estilo.css
+++ b/Curso HTML5/_css/estilo.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-
+@import url('https://fonts.googleapis.com/css?family=Titillium+Web&display=swap');
 body {
         /* background-image: url(" imagem jpeg de um fundo) */
         background-color: #dddddd;
@@ -44,7 +44,7 @@ header#cabecalho {
 }
 
 header#cabecalho h1 {
-        font-family: Arial, sans-serif;
+        font-family: 'Titillium Web', sans-serif;;
         font-size: 30pt;
         color: #606060;
         text-shadow: 1px 1px 1px rgba(0,0,0,.6);
@@ -53,7 +53,7 @@ header#cabecalho h1 {
 }
 
 header#cabecalho h2 {
-        font-family: Arial, Helvetica, sans-serif;
+        font-family: 'Titillium Web', sans-serif;
         color: #888888;
         font-size: 15pt;
         padding: 0px;
