--- a/Curso HTML5/_css/estilo.css
+++ b/Curso HTML5/_css/estilo.css
@@ -132,3 +132,33 @@ nav#menu a {
 nav#menu a:hover {
         color: white;
 }
+
+/* Configuração da section */
+section#corpo {
+        display: block;
+        width: 520px;
+        float: left;
+        /* linha que divide seção direita da esquerda */
+        border-right: 1px solid #606060;
+        padding-right: 15px;
+}
+
+aside#lateral {
+        display: block;
+        width: 350px;
+        float: right;
+}
+
+/* Configuração rodapé */
+footer#rodape {
+        /* limpar a configuração dos dois lados
+        rodapé vai ser mostrado fora dessas divisões
+        (definidas acima) */
+        clear: both;
+        /* linha dividindo o rodapé */
+        border-top: 1px solid #606060;
+}
+
+footer#rodape p {
+        text-align: center;
+}
