--- a/Curso HTML5/_css/estilo.css
+++ b/Curso HTML5/_css/estilo.css
@@ -143,6 +143,22 @@ section#corpo {
         padding-right: 15px;
 }
 
+/* Configuração da tabela de especificações técnicas */
+table#tabelaspec {
+        border: 1px solid #606060;
+        /* tira divisão entre as células */
+        border-spacing: 0px;
+        margin-left: auto;
+        margin-right: auto;
+}
+
+/* Configuração células da tabela */
+table#tabelaspec td {
+        border: 1px solid #606060;
+        padding: 10px;
+        text-align: center; 
+}
+
 aside#lateral {
         display: block;
         width: 350px;
