--- a/Curso HTML5/_css/fotos.css
+++ b/Curso HTML5/_css/fotos.css
@@ -16,20 +16,68 @@ ul#album-fotos li {
     border: 5px solid #ffffff;
     background-color: #ffffff;
     box-shadow: 1px 1px 3px rgba(0,0,0,.4);
+    /* efeito para ampliar a foto gradativamente */
+    -webkit-transition: all .4s ease-in;
+    /* para fins de compatibilidade para navegadores que
+    não usam o webkit */
+    transition: all .4s ease-in;
 }
 
 ul#album-fotos li span {
     opacity: 0;
+    color: #ffffff;
+    text-shadow: 1px 1px 1px black;
+    background-color: rgba(0,0,0,.3);
+    font-size: 9pt;
+    /* vai fazer com que a legenda desca */
+    line-height: 370px;
+    padding: 5px;
+}
+
+/* configura o zoom expandindo as imagens */
+ul#album-fotos li:hover {
+    /* da zoom de 1.5 na imagem */
+    -webkit-transform: scale(1.5);
+    /* para fins de compatibilidade para navegadores que
+    não usam o webkit */
+    transform: scale(1.5);
+}
+
+ul#album-fotos li:hover span {
+    opacity: 1;
 }
 
 ul#album-fotos li#foto01 {
     background: url('../imagens/cores-google-home.jpg') no-repeat;
+    /* deixa o centro da imagem no quadrado que delimitamos */
+    background-position: 50% 50%;
+    background-size: 400px 400px;
+    background-color: #ffffff;
+}
+/* configura zoom na imagem */
+ul#album-fotos li#foto01:hover {
+    background-position: 0px 0px;
+    background-size: 200px 200px;
 }
 
 ul#album-fotos li#foto02 {
     background: url('../imagens/familia-google-home.jpg') no-repeat;
+    background-position: 50% 50%;
+    background-size: 400px 400px;
+    background-color: #ffffff;
+}
+ul#album-fotos li#foto02:hover {
+    background-position: 0px 0px;
+    background-size: 200px 200px;
 }
 
 ul#album-fotos li#foto03 {
     background: url('../imagens/google-mini.jpg') no-repeat;
+    background-position: 50% 50%;
+    background-size: 400px 400px;
+    background-color: #ffffff;
+}
+ul#album-fotos li#foto03:hover {
+    background-position: 0px 0px;
+    background-size: 200px 200px;
 }
